--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 			<header class="site-header">
 				<div class="container shrinked">
 					<a href="about.html" class="button">About Us</a>
-					<h1 class="logo"><a href="index.html">Creativo</a></h1>
+					<h1 class="logo"><a href="index.html">HTM Industries</a></h1>
 					<a href="contact.html" class="button">Contact</a>
 				</div>	<!-- .container -->
 			</header> <!-- .site-header -->
 
 			<main class="main-content">
 				<div class="container shrinked">
-					<h1 class="section-title center-aligned">We are preparing something new. <br> <span>Stay tuned!</span></h1>
+					<h1 class="section-title center-aligned">We are preparing something new. <br> <span>Stay tuned! 😊 </span></h1>
 
 					<div class="counter-wrap" data-date-target="Feb 31, 2015 10:00:00">
 						<div class="counter days">
@@ -75,7 +75,7 @@
 						<a href="#"><i class="fa fa-pinterest"></i></a>
 					</div> <!-- .social-links -->
 
-					<div class="colophon">Copyright 2014 Creativo. All right reserved</div>
+					<div class="colophon">Copyright 2020 HTM Industries. All right reserved</div>
 
 				</div>	<!-- .container -->
 			</footer> <!-- .site-footer -->
