--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Creativo</title>
+		<title>HTM Industries</title>
 
 		<!-- Loading third party fonts -->
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
 			<header class="site-header">
 				<div class="container shrinked">
 					<a href="about.html" class="button">About Us</a>
-					<h1 class="logo"><a href="index.html">HTM Industries</a></h1>
+					<h1 class="logo"><a href="index.html">HTM Ind.</a></h1>
 					<a href="contact.html" class="button">Contact</a>
 				</div>	<!-- .container -->
 			</header> <!-- .site-header -->
@@ -53,11 +53,11 @@
 					<div class="team-section row">
 						<div class="team">
 							<img src="dummy/team-1.jpg" alt="Martin Lorenz" class="team-image">
-							<h2 class="team-name">Martin Lorenz</h2>
+							<h2 class="team-name">Sibonakaliso Zwide</h2>
 						</div>
 						<div class="team">
 							<img src="dummy/team-2.jpg" alt="Tina Montgomery" class="team-image">
-							<h2 class="team-name">Tina Montgomery</h2>
+							<h2 class="team-name">Megan Monney</h2>
 						</div>
 						<div class="team">
 							<img src="dummy/team-3.jpg" alt="Peter Wang" class="team-image">
