--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 			<header class="site-header">
 				<div class="container shrinked">
 					<a href="about.html" class="button">About Us</a>
-					<h1 class="logo"><a href="index.html">HTM Industies</a></h1>
+					<h1 class="logo"><a href="index.html">HTM Ind</a></h1>
 					<a href="contact.html" class="button">Contact</a>
 				</div>	<!-- .container -->
 			</header> <!-- .site-header -->
